update dto & dal